# Datathon-IE

./: .gitignore  README.md  Zero_Heroes_Final.ipynb  dashboard.py  fix_visualizations.py  generate_visualizations.py  pyproject.toml  setup_infrastructure.ps1  txt_extraction.ipynb  working - old.ipynb  working.ipynb
Datathon/: .gitignore  2026_01_02_R1-001_Generación.xlsx  README.md  build_grid_map.py  dashboard.py  generate_overview.py  generate_visualizations.py  txt_extraction.ipynb  working.ipynb
Datathon/outputs/: File 1.csv  grid_viability_map.html  light_map.html  repaired_map.html  road_network_map.html
Datathon/visualizations/: 01a_road_routes_folium.html  02a_ev_charging_folium.html  04a_endesa_folium.html  05a_viesgo_folium.html  06a_ev_registrations_folium.html  07a_vigo_charging_folium.html  endesa_generation_nodes_map.html  ev_registrations_by_province_map.html  road_od_flows_spain.html  viesgo_distribution_expansion_readiness.html  vigo_charging_stations_map.html
data/ENDESA - e-distribucion/: 2026_04_01_R1026_generación.csv  2026_04_01_R1299_generación.csv
data/Iberdrola Historical Map of Electricity Consumption Capacity/: 2026_03_05_R1-001_Demanda.csv
data/VIESGO/: 2026_04_01_R1005_demanda_Consumption capacity in the network.csv  2026_04_01_R1005_generacion_Generation capacity in the network.csv
data/road_routes/: download_pipeline.py
visualizations/: endesa_edistribucion_expansion_readiness.html  vigo_ev_charging_points.html
visualizations/chart drafts 1/: ev_charging_stations_map.html  viesgo_substation_capacity_map.html
(+6 files in other folders)
